# Practice-earthquake

./: .gitignore  README.md  app.py  main.py  pyproject.toml  super-mega-test.py
alchemy/: crud.py  database.py  main.py  models.py  schemas.py
app/: logger.py  main.py  storage.py
app/test/: test_storage.py
src/: crud.py  database.py  logger.py  models.py  schemas.py  storage.py
static/uploads/1/: test_file.txt
test/: test_main.py  test_models.py
test/src/: test_crud.py  test_models.py
